--- a/src/components/NewMessage/NewMessage.scss
+++ b/src/components/NewMessage/NewMessage.scss
@@ -5,8 +5,14 @@ form {
   position: absolute;
   bottom: 0;
 
-  input {
-    height: 3rem;
-    width: 100%;
+  .input {
+    width: 96%;
+    margin: 0 auto 0.6rem auto;
+
+    input {
+      height: 3rem;
+      width: 100%;
+      padding: 0 1rem;
+    }
   }
 }
