--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -2,10 +2,39 @@
 
 .segment {
   display: flex;
-  align-items: center;
   width: 90%;
-  border: 2px solid white;
-  padding: 0.5rem;
+  flex-direction: column;
   margin: 0 auto 1rem auto;
-  border-radius: 0.4rem;
+
+  .wrapper {
+    width: 70%;
+
+    .message-bubble {
+      background-color: white;
+      padding: 0.5rem 1.5rem;
+      border-radius: 1rem;
+      box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+        rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    }
+
+    span {
+      display: block;
+      font-size: 0.8rem;
+      padding: 0 0.6rem 0.1rem 0.6rem;
+      font-weight: bold;
+      color: rgb(41, 41, 41);
+    }
+  }
+}
+
+.ping {
+  align-items: flex-start;
+}
+
+.pong {
+  align-items: flex-end;
+
+  span {
+    text-align: right;
+  }
 }
