:sparkles: correction + edit readme.md

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,7 +1,7 @@
 @use '../../styles/variables' as v;
 
 .app {
-  width: 50%;
+  max-width: 470px;
   height: 100%;
   margin: 0 auto;
   background-color: #ffffff6e;
