--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -20,7 +20,7 @@
     span {
       display: block;
       font-size: 0.8rem;
-      padding: 0 0.6rem 0.1rem 0.6rem;
+      padding: 0 0.3rem;
       font-weight: bold;
       color: rgb(41, 41, 41);
     }
