--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -6,9 +6,7 @@
   margin: 0 auto;
   background-color: #ffffff6e;
   position: relative;
-
-  .container {
-    height: auto;
-    padding: 2rem 0;
-  }
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
