--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,12 +1,23 @@
 @use '../../styles/variables' as v;
 
 .app {
-  max-width: 470px;
-  height: 100%;
-  margin: 0 auto;
-  background-color: #ffffff6e;
-  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  max-width: 470px;
+  height: 100%;
+  position: relative;
+  margin: 0 auto;
+  background-color: #ffffff6e;
+
+  .backdrop {
+    display: none;
+    z-index: 1;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    height: 100vh;
+    background-color: rgb(57 57 57 / 33%);
+    left: 0;
+  }
 }
