--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -19,5 +19,9 @@
     height: 100vh;
     background-color: rgb(57 57 57 / 33%);
     left: 0;
+
+    &.active {
+      display: block;
+    }
   }
 }
