:art: CSS Enjoyer

--- a/src/components/MessagesList/MessagesList.scss
+++ b/src/components/MessagesList/MessagesList.scss
@@ -1,7 +1,34 @@
 @use '../../styles/variables' as v;
 
-.container-list {
+.container-messages {
   height: 100%;
-  overflow-y: scroll;
-  padding: 2rem 0;
+  overflow: hidden;
+
+  .messages-list {
+    height: 93%;
+    overflow-y: scroll;
+    padding: 2rem 0 0 0;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
+  }
+
+  .messages-wrapper {
+    padding: 1rem;
+    border-bottom: 2px solid white;
+    background: #ffffff52;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+
+    &__image {
+      margin-right: 1rem !important;
+    }
+
+    &__title {
+      font-size: 1.3rem;
+      margin: 0;
+    }
+  }
 }
