--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -27,6 +27,10 @@
       border-radius: 1rem;
       box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
         rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+
+      &__content {
+        min-height: 19.98px;
+      }
     }
 
     span {
