--- a/src/components/UserSettings/UserSettings.scss
+++ b/src/components/UserSettings/UserSettings.scss
@@ -1,8 +1,8 @@
 .settings-user {
   display: flex;
   position: absolute;
-  top: 1.5rem;
-  right: -22rem;
+  top: 1rem;
+  right: -23rem;
   width: 22rem;
   z-index: 2;
 
@@ -17,6 +17,10 @@
         rgba(27, 31, 35, 0.15) 0px 0px 0px 1px !important;
 
       margin: 0.6rem 0 0 0;
+
+      &.button.toggle.active {
+        background-color: #db2828 !important;
+      }
     }
   }
 
