:sparkles: Adding a go down button (CSS+JS) when the view is not at the last message

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -5,6 +5,8 @@
   flex-direction: column;
   justify-content: space-between;
   max-width: 470px;
+  width: 45%;
+  min-width: 370px;
   height: 100%;
   position: relative;
   margin: 0 auto;
