--- a/src/components/MessagesList/MessagesList.scss
+++ b/src/components/MessagesList/MessagesList.scss
@@ -33,5 +33,13 @@
     &::-webkit-scrollbar {
       display: none;
     }
+
+    .button--down {
+      position: fixed;
+      opacity: 0.8;
+      bottom: 35px;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
   }
 }
