--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -13,12 +13,18 @@
   &--pong {
     align-items: flex-end;
 
-    span {
-      text-align: right;
+    .message {
+      &__author {
+        text-align: right;
+      }
+
+      &__date {
+        text-align: left !important;
+      }
     }
   }
 
-  .wrapper {
+  .message {
     width: 70%;
 
     .message-bubble {
@@ -27,18 +33,28 @@
       border-radius: 1rem;
       box-shadow: rgba(109, 115, 119, 0.3) 0px 1px 2px 0px,
         rgba(191, 196, 201, 0.15) 0px 2px 6px 2px;
-
-      &__content {
-        min-height: 19.98px;
-      }
     }
 
-    span {
+    &__author {
       display: block;
       font-size: 0.8rem;
       padding: 0 0.3rem;
       font-weight: bold;
       color: rgb(41, 41, 41);
+    }
+
+    &__content {
+      min-height: 19.98px;
+    }
+
+    &__date {
+      font-size: 0.7rem;
+      color: #737373;
+      display: block;
+      text-align: right;
+      padding: 0.1rem 0.9rem 0rem 0.9rem;
+      letter-spacing: 0.2px;
+      font-weight: 400;
     }
   }
 }
